@@ -23,6 +23,25 @@ int32_t SPVM__Net__SSLeay__ASN1_STRING__length(SPVM_ENV* env, SPVM_VALUE* stack)
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__ASN1_STRING__get0_data(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  ASN1_STRING* asn1_string = env->get_pointer(env, stack, obj_self);
+  
+  const unsigned char* string = ASN1_STRING_get0_data(asn1_string);
+  
+  int32_t length = ASN1_STRING_length(asn1_string);
+  
+  void* obj_string = env->new_string(env, stack, string, length);
+  
+  stack[0].oval = obj_string;
+  
+  return 0;
+}
+
 int32_t SPVM__Net__SSLeay__ASN1_STRING__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
