@@ -18,6 +18,8 @@ class Net::SSLeay::ASN1_STRING : pointer {
   # Instance Methods
   native method length : int ();
   
+  native method get0_data : string ();
+  
   native method DESTROY : void ();
   
 }
